# Redes-de-sensores-WSN---Taller-2

./: README.md
ros_reto/: Dockerfile
ros_reto/sensor_program/: package.xml  setup.cfg  setup.py
ros_reto/sensor_program/sensor_program/: plotter_node.py  reader_node.py  sensor_node.py
