<?xml version="1.0"?>
<package format="3">
  <name>sensor_program</name>
  <version>0.0.1</version>
  <description>Paquete ROS 2 para publicar y leer temperaturas simuladas.</description>

  <maintainer email="tu_correo@ejemplo.com">Tu Nombre</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencias necesarias -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>matplotlib</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
